--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@ nav {
   height: 70px;
   padding: 10px;
   width: 100vw;
-  position: fixed;
+  position: relative;
   justify-content: space-evenly;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.3);
